# lotsoflots

./: .gitignore  README.md  docker-compose.yml  landing.html  lots.json  lots_scraped.html  pyproject.toml  requirements.txt
scraper/: Dockerfile  items.py  models.py  pipelines.py  requirements.txt  settings.py
scraper/scraper/: items.py  models.py  pipelines.py  settings.py
scraper/scraper/spiders/: lot_spider.py
scraper/spiders/: lot_spider.py
