[tool.poetry]
name = "lotsoflots"
version = "0.1.0"
description = "A simple scraping project that gathers data on auction lots from k-auction.com."
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
